--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 /[Ll]ibrary/
 /[Tt]emp/
 /[Oo]bj/
-/[Bb]uild/
+#/[Bb]uild/
 /[Bb]uilds/
 /Assets/AssetStoreTools*
 
@@ -17,6 +17,7 @@ ExportedObj/
 *.pidb
 *.booproj
 *.svd
+*.pdb
 
 
 # Unity3D generated meta files
